# MicroEng_Navisworks

./: .gitignore  AGENTS.md  MICROENG_THEME_GUIDE.md  MicroEng_Navisworks.sln  MicroEng_Navisworks_tree.txt  NavisworksManage2025_tree.txt  ProjectTree.md  README.md  package-lock.json
MicroEng.DesignHost/: App.xaml  App.xaml.cs  DesignWindow.xaml  DesignWindow.xaml.cs  MicroEng.DesignHost.csproj
MicroEng.Navisworks/: AppendIntegrateDialog.xaml  AppendIntegrateDialog.xaml.cs  AppendIntegrateExecutor.cs  AppendIntegrateModels.cs  Class1.cs  DataMatrixColumnBuilderWindow.xaml  DataMatrixColumnBuilderWindow.xaml.cs  DataMatrixControl.xaml  DataMatrixControl.xaml.cs  DataMatrixExporter.cs  DataMatrixFilterBuilderWindow.xaml  DataMatrixFilterBuilderWindow.xaml.cs  DataMatrixModels.cs  DataMatrixPanel.cs  DataMatrixPlugins.cs  DataMatrixPresetManager.cs  DataMatrixRowBuilder.cs  DataScraperModels.cs  DataScraperRunProgressWindow.xaml.cs  DataScraperService.cs  DataScraperWindow.xaml  DataScraperWindow.xaml.cs  DevSelectionTreeProbeAddIn.cs  MicroEng.Navisworks.addin  MicroEng.Navisworks.csproj  MicroEngPanelControl.xaml  MicroEngPanelControl.xaml.cs  MicroEngPlugins.cs  MicroEngSettingsWindow.xaml  MicroEngSettingsWindow.xaml.cs  MicroEngWindowPositioning.cs  MicroEngWpfUiTheme.cs  NavisworksDockPaneManager.cs  PropertyPickerDialog.cs  Sequence4DControl.xaml  Sequence4DControl.xaml.cs  Sequence4DPlugins.cs  (+23 more)
Native/MicroEng.CudaBvhPointInMesh/: CMakeLists.txt  microeng_cuda_bvh_point_in_mesh.cu
Native/MicroEng.CudaPointInMesh/: CMakeLists.txt  microeng_cuda_point_in_mesh.cu
(+216 files in other folders)
